# pm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  database.py  db.py  main.py  models.py  seed.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_auth.py  test_board.py  test_health.py
docs/: AI.md  DATABASE.md  PLAN.md  code-review.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: App.test.tsx  App.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  Login.tsx
frontend/src/lib/: auth.ts  board.ts  chat.ts  kanban.test.ts  kanban.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  fixtures.ts  kanban.spec.ts
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
