[project]
name = "kanban-pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Kanban PM MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "itsdangerous>=2.2",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
